--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lost Star Games - CD MARKET Support</title>
+    <title>Lost Star Games Support</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -50,8 +50,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Privacy Policy for CD MARKET</h1>
-        <p>CD MARKET does not collect, store, or share any personal information from its users. The game does not use any tracking or analytics tools and does not request or access any personal data from users.</p>
+        <h1>CD MARKET</h1>
         <p>If you have any questions or concerns, you can contact us at:</p>
         <a href="mailto:cdmarketgame@gmail.com" class="contact-link">cdmarketgame@gmail.com</a>
     </div>
